# Qt-Chat-App

./: CMakeLists.txt.user.7070660  README.md  main.cpp  main.qml  tcpserver.h
qtchatclient/: CMakeLists.txt  CMakeLists.txt.user.7070660  main.cpp  tcpclient.h
qtchatserver/: CMakeLists.txt
